# GlassPlayerHost

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.ac  glassplayerhost-embed.spec.in  glassplayerhost-fastembed.spec.in
conf/: Makefile.am  glassplayerhost-sample.conf  glassplayerhost-site.conf.in  glassplayerhost.htpasswd  glassplayerhost.users  webhost.conf
helpers/: Makefile.am
src/: Makefile.am
src/cgi-src/: Makefile.am  glassplayer.js  glassplayerhost.cpp  homepage.h  index.html  ipsystem.js  navbar.js  player.js  playerpage.cpp  stats.js  statspage.cpp  statspage.h  systemcontrol.cpp  systempage.cpp  systempage.h  upgradecontrol.cpp  upgradecontrol.h
src/common/: Makefile.am  config.cpp  config.h  paths.h.in
src/glassformatter/: Makefile.am  glassformatter.cpp  glassformatter.h  statsstore.cpp  statsstore.h  statsvalues.cpp  statsvalues.h
src/glassplayerhost/: Makefile.am  glassplayerhost.cpp  glassplayerhost.h  udpcontrol.cpp  udpcontrol.h
src/web/: Makefile.am  cgicommands.h  glassplayer.js  glassplayerhost.cpp  glassplayerhost.h  homepage.cpp  ipsystem.js  navbar.js  player.js  playercontrol.cpp  playercontrol.h  playerpage.cpp  playerpage.h  refresh.js  stats.js  statspage.cpp  systemcontrol.h  systempage.cpp  upgradecontrol.cpp  utils.js
